Fixing issues and adding Header file
Change-Id: If620726c4072ce085490e239b07dc3348b8f9e03

--- a/PlayChat/Info.plist
+++ b/PlayChat/Info.plist
@@ -29,7 +29,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.973162898478-bkumhvejr8al450g3jijobjtpoh3bc6p</string>
+				<string>[REVERSED_CLIENT_ID]</string>
 			</array>
 		</dict>
 	</array>
